--- a/dataset_process/dataset_process.ipynb
+++ b/dataset_process/dataset_process.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 660/660 [00:00<00:00, 732.43it/s]\n"
+      " 32%|███▏      | 210/660 [23:38<43:53,  5.85s/it]  "
      ]
     }
    ],
@@ -127,6 +127,34 @@
     "#Genarate MMPD  \n",
     "files_mmpd = df['file']\n",
     "dump_dataset(\"Z:/rppg/mmpd_dataset.h5\", files_mmpd, loader_mmpd, compression=0, labels=[dict(df.loc[i]) for i in range(len(df))], threads=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating dataset Z:/rppg/cohface_dataset.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [00:16<00:00, 10.16it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../datasets/COHFACE_dataset_index.csv')\n",
+    "\n",
+    "#Genarate COHFACE  \n",
+    "files_cohface = df['file']\n",
+    "dump_dataset(\"Z:/rppg/cohface_dataset.h5\", files_cohface, loader_cohface, compression=0, labels=[dict(df.loc[i]) for i in range(len(df))], threads=8)"
    ]
   },
   {
